# SmartCalc

CmakeSM/: CMakeLists.txt  Makefile
CmakeSM/SmartCalc/: Makefile
CmakeSM/SmartCalc/function/: struct.h
CmakeSM/SmartCalc/function/calculator/: bonusCalc.c  calculator.c  calculator.h  help.c  parser.c
CmakeSM/SmartCalc/function/stack/: help.c  stack.c  stack.h
CmakeSM/SmartCalc/test/: maintest.c  maintest.h  testBonus.c  testCalc.c  testParser.c
CmakeSM/source/: creditcalc.cpp  depositcalc.cpp  depositcalc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CmakeSmartCalc/: Makefile  qcustomplot.cpp
CmakeSmartCalc/SmartCalc/: s21_smartCalc.h
CmakeSmartCalc/SmartCalc/test/: maintest.c  maintest.h  testCalc.c
CmakeSmartCalc/source/: creditcalc.h  creditcalc.ui  depositcalc.cpp  depositcalc.ui  mainwindow.ui
